# GestuteBridge

./: .gitignore  README.md  data_collection.py  pyproject.toml
GestureBridge/: action.keras  actions.py  actions.txt  app.py  hand_tracking.py  main.py  model.py  requirements.txt  sarvam_utils.py  text_to_sign.py  train.py
